Update content and translations

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,12 +27,12 @@
     <section class="card" id="card">
         <div class="card-container" id="category-cards-container">
             <div class="card-box" data-category="sicakicecekler"> 
-                <img src="images/hot1.jpg" alt="Sıcak İçecekler">
-                <h4 class="bottom-left">Sıcak İcecekler</h4> 
+                <img src="images/hot1.jpg" alt="Hot Drinks">
+                <h4 class="bottom-left">Hot Drinks</h4> 
             </div>
             <div class="card-box" data-category="tatlilar">
-                <img src="images/tatlı1.jpg" alt="Tatlılar">
-                <h4 class="bottom-left">Tatlılar</h4> 
+                <img src="images/tatlı1.jpg" alt="Desserts">
+                <h4 class="bottom-left">Desserts</h4> 
             </div>
             <div class="card-box" data-category="herbalteas">
                 <img src="images/herbal1.jpg" alt="Herbal Teas">
@@ -51,8 +51,8 @@
                 <h4 class="bottom-left">Brew Bar</h4> 
             </div>
             <div class="card-box" data-category="yemekler">
-                <img src="images/yemek1.jpg" alt="Yemekler">
-                <h4 class="bottom-left">Yemekler</h4> 
+                <img src="images/yemek1.jpg" alt="Meals">
+                <h4 class="bottom-left">Meals</h4> 
             </div>
         </div>
         
