--- a/admin/index.html
+++ b/admin/index.html
@@ -22,24 +22,71 @@
     <div class="muted">No orders yet. Orders saved when customers checkout.</div>
   </div>
 
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
+  <script src="../js/firebase-config.js"></script>
   <script>
-    function renderOrders(){
-      const root = document.getElementById('orders-root');
+    const root = document.getElementById('orders-root');
+    function renderTable(orders){
+      if(!orders || orders.length===0){ root.innerHTML = '<div class="muted">No orders yet. Orders saved when customers checkout.</div>'; return; }
+      let html = '<table><thead><tr><th>Order ID</th><th>Table</th><th>Items</th><th>Qty</th><th>Time</th></tr></thead><tbody>';
+      orders.slice().reverse().forEach(o=>{
+        const items = o.items.map(i=>`${i.name} (${i.qty})`).join('<br>');
+        html += `<tr><td>${o.id}</td><td>${o.table}</td><td>${items}</td><td>${o.totalQty}</td><td>${new Date(o.createdAt).toLocaleString()}</td></tr>`;
+      });
+      html += '</tbody></table>';
+      root.innerHTML = html;
+    }
+
+    // If Firestore is available, use live updates; otherwise fall back to localStorage
+    function setupRealtime() {
+      try {
+        if (typeof firebase !== 'undefined' && firebase.firestore) {
+          const db = firebase.firestore();
+          db.collection('orders').orderBy('createdAt','desc').onSnapshot(snapshot => {
+            if (snapshot.empty) {
+              // If Firestore has no documents yet, show localStorage fallback
+              renderFromLocal();
+              return;
+            }
+            const orders = [];
+            snapshot.forEach(doc => orders.push(doc.data()));
+            renderTable(orders);
+          }, err => {
+            console.error('Firestore listener error', err);
+            renderFromLocal();
+          });
+          // wire clear to remove from Firestore (confirm first)
+          document.getElementById('clear-orders').addEventListener('click', ()=>{
+            if(!confirm('Clear all orders from localStorage and Firestore?')) return;
+            // clear localStorage
+            localStorage.removeItem('orders');
+            // NOTE: deleting Firestore documents requires appropriate rules and permissions
+            // Here we attempt to delete all docs (will fail if client not permitted)
+            db.collection('orders').get().then(snap=>{
+              const batch = db.batch();
+              snap.forEach(d=> batch.delete(d.ref));
+              return batch.commit();
+            }).then(()=>{ console.log('Attempted to clear Firestore orders'); }).catch(e=>{ console.warn('Could not clear Firestore orders', e); });
+          });
+          // refresh button not needed with realtime
+          document.getElementById('refresh-orders').addEventListener('click', ()=>{});
+          return;
+        }
+      } catch(e){ console.warn('Realtime setup failed', e); }
+      renderFromLocal();
+    }
+
+    function renderFromLocal(){
       try{
         const orders = JSON.parse(localStorage.getItem('orders')||'[]');
-        if(!orders || orders.length===0){ root.innerHTML = '<div class="muted">No orders yet. Orders saved when customers checkout.</div>'; return; }
-        let html = '<table><thead><tr><th>Order ID</th><th>Table</th><th>Items</th><th>Qty</th><th>Time</th></tr></thead><tbody>';
-        orders.slice().reverse().forEach(o=>{
-          const items = o.items.map(i=>`${i.name} (${i.qty})`).join('<br>');
-          html += `<tr><td>${o.id}</td><td>${o.table}</td><td>${items}</td><td>${o.totalQty}</td><td>${new Date(o.createdAt).toLocaleString()}</td></tr>`;
-        });
-        html += '</tbody></table>';
-        root.innerHTML = html;
+        renderTable(orders);
       }catch(e){ root.innerHTML = '<div class="muted">Could not read orders</div>'; console.error(e); }
     }
-    document.getElementById('refresh-orders').addEventListener('click', renderOrders);
-    document.getElementById('clear-orders').addEventListener('click', ()=>{ if(!confirm('Clear all orders?')) return; localStorage.removeItem('orders'); renderOrders(); });
-    renderOrders();
+
+    // wire refresh for local fallback
+    document.getElementById('refresh-orders').addEventListener('click', renderFromLocal);
+    setupRealtime();
   </script>
 
   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
